CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
IF(NOT DEFINED PROJECT_NAME)
	SET(PROJECT_NAME "UIEngine")
	PROJECT(${PROJECT_NAME})
ENDIF()

LIST( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" )
INCLUDE( msvc_support )

#SET(CMAKE_C++_CREATE_STATIC_LIBRARY 1)

IF(NOT DEFINED UI_ROOT_DIR)
	SET(UI_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
ENDIF()

SET (UI_SOURCE_DIR "${UI_ROOT_DIR}/source")
SET (UI_PCH_SUBDIR ${UI_SOURCE_DIR}/stdafx)
SET (UI_PCH_NAME "stdafx")
SET (UI_PCH_HEADER ${UI_PCH_NAME}.h)
SET (UI_PCH_CPP ${UI_PCH_NAME}.cpp)
SET (UI_PCH_BIN ${UI_PCH_NAME}.pch)

SET(UI_SOURCE_SUBDIRS 
"stdafx"
"UIManager"
"UIObject"
"UIObject/2D"
"UIObject/3D"
"UIObject/Shape"
"UIObject/Shape/2DShape"
"UIObject/Shape/3DShape"
)

SET(UI_SOURCE_FILES "")
FOREACH(subdir ${UI_SOURCE_SUBDIRS})
	FILE(GLOB TEMP ${UI_SOURCE_DIR}/${subdir}/*.cpp ${UI_SOURCE_DIR}/${subdir}/*.h)
	SET(UI_SOURCE_FILES ${UI_SOURCE_FILES} ${TEMP})
ENDFOREACH()

ADD_LIBRARY (UIEngine
${UI_SOURCE_FILES}
)
FOREACH(subdir ${UI_SOURCE_SUBDIRS})
	STRING(REPLACE "/" "\\" tempSubdir ${subdir})
	FILE(GLOB subdir_files ${UI_SOURCE_DIR}/${subdir}/*.cpp ${UI_SOURCE_DIR}/${subdir}/*.h)
    SOURCE_GROUP(${tempSubdir} FILES ${subdir_files})
ENDFOREACH()

INCLUDE_DIRECTORIES( ${UI_SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${UI_PCH_SUBDIR} )

MSVC_SET_PCH(UIEngine
${UI_PCH_SUBDIR}/${UI_PCH_HEADER}
${UI_PCH_SUBDIR}/${UI_PCH_CPP}
)

#SET_TARGET_PROPERTIES(UIEngine PROPERTIES LINKER_LANGUAGE C++)